[[release-notes-6.0.0]]
== 6.0.0

*Date of Release:* ❓

*Scope:* ❓

For a complete list of all _closed_ issues and pull requests for this release, consult the
link:{junit-framework-repo}+/milestone/87?closed=1+[6.0.0-M1],
link:{junit-framework-repo}+/milestone/99?closed=1+[6.0.0-M2],
link:{junit-framework-repo}+/milestone/102?closed=1+[6.0.0-RC1],
link:{junit-framework-repo}+/milestone/105?closed=1+[6.0.0-RC2], and
link:{junit-framework-repo}+/milestone/103?closed=1+[6.0.0]
milestone pages in the JUnit repository on GitHub.

[TIP]
.Migration Guide
====
Please refer to the
https://github.com/junit-team/junit-framework/wiki/Upgrading-to-JUnit-6.0[wiki] for
guidance on upgrading from JUnit 5.x.y to 6.0.0.
====


[[release-notes-6.0.0-junit-platform]]
=== JUnit Platform

[[release-notes-6.0.0-junit-platform-bug-fixes]]
==== Bug Fixes

* ❓

[[release-notes-6.0.0-junit-platform-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-6.0.0-junit-platform-new-features-and-improvements]]
==== New Features and Improvements

* ❓


[[release-notes-6.0.0-junit-jupiter]]
=== JUnit Jupiter

[[release-notes-6.0.0-junit-jupiter-bug-fixes]]
==== Bug Fixes

* ❓

[[release-notes-6.0.0-junit-jupiter-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-6.0.0-junit-jupiter-new-features-and-improvements]]
==== New Features and Improvements

* ❓


[[release-notes-6.0.0-junit-vintage]]
=== JUnit Vintage

[[release-notes-6.0.0-junit-vintage-bug-fixes]]
==== Bug Fixes

* ❓

[[release-notes-6.0.0-junit-vintage-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-6.0.0-junit-vintage-new-features-and-improvements]]
==== New Features and Improvements

* ❓