@@ -10,25 +10,17 @@
 
 package org.junit.platform.commons.support;
 
-import static org.apiguardian.api.API.Status.INTERNAL;
-
 import java.net.URI;
 
-import org.apiguardian.api.API;
 import org.junit.platform.commons.util.Preconditions;
 import org.junit.platform.commons.util.ToStringBuilder;
 
 /**
- * <h2>DISCLAIMER</h2>
- *
- * <p>This class is intended solely for usage within the JUnit framework itself.
- * <strong>Any usage by external parties is not supported.</strong>
- * Use at your own risk!
+ * Default implementation of {@link Resource}.
  *
  * @since 1.11
  */
-@API(status = INTERNAL, since = "1.12")
-public record DefaultResource(String name, URI uri) implements Resource {
+record DefaultResource(String name, URI uri) implements Resource {
 
 	public DefaultResource {
 		Preconditions.notNull(name, "name must not be null");
